Adding a little bit about 2HDMs

--- a/Theory/Theory.tex
+++ b/Theory/Theory.tex
@@ -115,7 +115,13 @@ angle $\alpha \approx \beta - \pi/2$. This reduces the couplings in table
 \ref{tab:mssm_couplings} to the \ac{SM} couplings for the \PHiggslight boson, 
 with negligible couplings to bosons for the two remaining neutral
 Higgs bosons, couplings to down-type quarks and leptons enhanced by a factor \tanb,
-and couplings to up-type quarks enhanced by a factor $\frac{1}{\tan{\beta}}$.
+and couplings to up-type quarks enhanced by a factor $\frac{1}{\tan{\beta}}$. This motivates
+the choice of decay into $\Pgt\Pgt$ as search channel for the neutral Higgs bosons in the MSSM.
+Figure \ref{fig:mssm_brtautau} shows the branching ratios of the \PHiggs boson 
+in the $m_{h}^{\text{mod+}}$ scenario
+which will be discussed in more detail in section \ref{sec:theory_BSM_models_mhmodp}. 
+The branching ratio into di-$\Pgt$ pairs is large for \tanb=30. The branching ratios 
+into $\Pgt\Pgt$ of \PHiggsps are of similar size.
 %Using trigon identities: cos alpha/cos beta = cos (beta-pi/2)/cos beta = cosbeta*cospi/2 + sin(beta)*sin(pi/2) over cos beta = sin beta /cos beta = tan beta
 %sin alpha = sin (beta-pi/2) = sinbeta cos pi/2 - cosbetasinpi/2 = -cosbeta 
 %such that -sinalpha/cosbeta = 1
@@ -124,9 +130,60 @@ and couplings to up-type quarks enhanced by a factor $\frac{1}{\tan{\beta}}$.
 %cos beta-alpha = cos pi/2 = 0
 %sin alpha/sin beta = -cos beta/sin beta=-1/tan(beta)
 
+\begin{figure}[h!]
+\begin{center}
+\subfloat[\tanb=5]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/YR4HXS_BRSummary_H_mhmodp_tanbeta5_FeynHiggs_HDecay.pdf}}
+\subfloat[\tanb=30]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/YR4HXS_BRSummary_H_mhmodp_tanbeta30_FeynHiggs_HDecay.pdf}}
+\end{center}
+\caption{Branching ratios of the \PHiggs boson in the $m_{h}^{\text{mod+}}$ scenario,
+at (a) \tanb=5~and (b) \tanb=30. The branching ratio into \Pgt\Pgt (blue), $b\bar{b}$ (red) 
+and \Pgm\Pgm (yellow) is enhanced at high \tanb, while the branching ratio into 
+WW (grey) and \ttbar (green) is reduced \cite{MSSM-xswg-twiki}.}
+\label{fig:mssm_brtautau}
+\end{figure}
+
+The dominant neutral MSSM Higgs boson production processes at hadron colliders
+are slightly different from the \ac{SM} Higgs boson production processes. 
+Because the pseudoscalar A does not couple to the
+vector bosons, and in the decoupling limit the coupling of \PHiggs to vector
+bosons is suppressed with respect to the \ac{SM} expectation, VBF and PW/PZ associated
+production do not constitute dominant production processes. Gluon fusion production is 
+the dominant production mode at low \tanb, like in the \ac{SM}. An example tree-level Feynman diagram is given in figure \ref{fig:production_mssm}a. In gluon fusion production the Higgs boson
+is produced via a quark loop. At low \tanb~values this loop is dominated by top quarks, while at 
+high \tanb~the b-quark loop dominates. This is a result of the enhanced coupling to down-type fermions at high \tanb. Another consequence of these enhanced couplings to down-type fermions at high \tanb~is the dominance of b-associated production, where the Higgs boson is produced through
+bottom quark fusion. The tree-level Feynman diagram for this process is shown in figure \ref{fig:production_mssm}b.
+
+\begin{figure}[h!]
+\begin{center}
+\subfloat[gluon fusion production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-a.pdf}}
+\subfloat[b-associated production]{\includegraphics[width=0.5\textwidth]{./Theory/Figures/CMS-PAS-HIG-16-037_Figure_001-b.pdf}}
+\end{center}
+\caption{Tree-level Feynman diagrams of (a) gluon fusion production and (b) b-associated
+production of neutral Higgs boson in the MSSM \cite{CMS-PAS-HIG-16-037}.}
+\label{fig:production_mssm}
+\end{figure}
 
 \subsection{\acl{2HDM}s}
 \label{sec:theory_2HDM}
+A different approach, also leading to an extended Higgs sector with
+respect to the \ac{SM} case, is found in the \ac{2HDM} \cite{2HDM-I}.
+As the name suggests \ac{2HDM}s are a generic class of models in which
+there is not one, but two Higgs doublets. The addition of a second
+Higgs doublet can also motivated by \ac{SUSY}, but also by axion models.
+An important point to note is that despite the presence of a second 
+Higgs doublet, there are no explicit \ac{SUSY} particles in the \ac{2HDM}.
+There are many different types of \ac{2HDM}, all distinguished by the couplings
+of the different Higgs bosons to bosons and fermions. The most studied of the
+\ac{2HDM}s, the type-II \ac{2HDM}, has a structure very similar to 
+the MSSM Higgs sector. The couplings of the neutral Higgs bosons to 
+vector bosons and fermions are the same as the \ac{MSSM} couplings from table \ref{tab:mssm_couplings}.
+
+The differences between the type II \ac{2HDM} and the \ac{MSSM}
+are that $\alpha$ is a free parameter in the \ac{2HDM}, while
+in the \ac{MSSM} it is not. In addition the masses of the Higgs bosons
+are free parameters. In the \textit{alignment} limit, where $\cos{(\beta-\alpha)}$
+approaches 0, the couplings are exactly \ac{SM}-like.
+
 
 \section{MSSM benchmark scenarios}
 \label{sec:theory_BSM_models}
