Adding more on 2HDMs and SM H measurements

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -17,7 +17,7 @@ of the \Htohh and \AtoZh analyses, plus their combination.
 Both searches, and their interpretation, are detailed in reference \cite{CMS-HIG-14-034}.
 
 The discovery of the 125 GeV Higgs boson by the ATLAS and CMS collaborations in 2012 \cite{HDiscoveryAtlas,HDiscoveryCMS} has opened up
-new possibilities for probing the Higgs sector beyond the Standard Model. As discussed in chapter THEORY, in some MSSM scenarios, and some more
+new possibilities for probing the Higgs sector beyond the Standard Model. As discussed in chapter \ref{chap:theory}, in some \ac{MSSM} scenarios, and some more
 generic type-II 2HDM's, a heavy neutral Higgs boson H can decay to a pair of 125 GeV Higgs bosons for low values
 of \tanb, probing a region of phase space not yet excluded by the stringent existing limits. In regions where
 the decay \Htohh is enhanced, the \AtoZh decay also has a large branching ratio, indicating the usefulness
@@ -782,16 +782,15 @@ sensitive, with the \tautau channel being more sensitive at higher masses.}
 \subsection{Model-dependent results}
 \label{sec:hhh_results_modeldep}
 The results of the analysis are interpreted in two scenarios, the low \tanb~MSSM
-scenario, and a type II two--Higgs doublet model (2HDM), both discussed in section THEORY
+scenario, and a type II two--Higgs doublet model (2HDM), both discussed in chapter \ref{chap:theory}.
 
 \subsubsection{Interpretation in a type II 2HDM}
 \label{sec:hhh_results_modeldep_2HDM}
-NOTE: move description of 2HDM to theory section + expand
-A 2HDM of type II has more free parameters than specific MSSM benchmark scenarios: the physical masses of the Higgs bosons (\mh, \mH,
-\mA, \mHplus), the ratio of the vacuum expectation values of the two Higgs doublets (\tanb),
-the CP-even Higgs mixing angle ($\alpha$) and $m_{12}^{2} = m_{\PHiggsps}^{2}[\tan{\beta}/(1+\tan{\beta}^2)]$.
-To leave two free parameters, it is enough to fix the masses of the physical Higgs bosons. For this
-interpretation the assumption that \mA = \mH = \mHplus = $300$~GeV, and \mh = $125$~GeV, is made.
+As we have seen in section \ref{sec:theory_2HDM}, a \ac{2HDM} has more
+free parameters than a particular \ac{MSSM} benchmark scenario. To leave
+just two free parameters, it is enough to fix the masses of the five Higgs bosons
+and take the quartic couplings to be 0.
+For the interpretation shown here the assumption that \mA=\mH=\mHplus=$300$ GeV is made.
 
 The couplings of the Higgs bosons to quarks and leptons, and of the heavy Higgs bosons to other
 particles, are defined by $\alpha$ and $\beta$, as in table \ref{tab:hhh_2HDM_couplings}.
@@ -868,7 +867,7 @@ in this section are also visible in this combined interpretation.
 
 \subsubsection{Interpretation in the low \tanb~MSSM scenario}
 \label{sec:hhh_results_modeldep_lowtb}
-The low \tanb~MSSM scenario, as discussed in section THEORY
+The low \tanb~MSSM scenario, as discussed in section \ref{sec:mssm_theory_lowtb}
 is an MSSM scenario that has been adapted to allow \mh $=125 \pm 3$~GeV for \tanb~values
 as low as 1.  
 
