--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -9,7 +9,7 @@ detailed in reference \cite{CMS-PAS-HIG-16-037}. The \etau, \mutau, \tautau and 
 states of the di-\Pgt pair were studied. The results of this search are 
 model--independent upper limits on $\sigma \times$ BR of \PHiggs or \PHiggsps 
 production in the gluon fusion (gg$\phi$) and b-associated (bb$\phi$) production 
-modes (see chapter [THEORY]) and decay into $\Pgt\Pgt$. 
+modes (see chapter \ref{chap:theory}) and decay into $\Pgt\Pgt$. 
 In addition to the upper limits on cross--section times branching ratio of these two processes, 
 the results are interpreted in MSSM benchmark scenarios.
 A very similar analysis, not described in detail here,
@@ -1413,7 +1413,7 @@ expected best fit point for the presence of a 125 GeV SM Higgs boson, and the pu
 \subsection{Interpretation in MSSM benchmark scenarios}
 \label{sec:mssm_results_modeldep}
 The results are interpreted in two MSSM benchmark scenarios: the $m_{\text{h}}^{\text{mod+}}$
-scenario and the hMSSM scenario. Both scenarios are described in chapter [THEORY].
+scenario and the hMSSM scenario. Both scenarios are described in chapter \ref{chap:theory}.
 
 Figure \ref{fig:mssm_mhmodp_2016}a shows the expected (dashed line and grey bands) and
 observed (blue shaded area bounded by solid line) exclusion of the search presented in this chapter
