--- a/backmatter.tex
+++ b/backmatter.tex
@@ -23,7 +23,7 @@
 \acro{LS1}[LS1]{Long Shutdown 1}
 \acro{MSSM}[MSSM]{minimal supersymmetric standard model}
 \acro{SM}[SM]{standard model}
-\acro{SUSY}[SUSY]{Supersymmetry}
+\acro{SUSY}[SUSY]{supersymmetry}
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
 \acro{ECAL}[ECAL]{Electromagnetic calorimeter}
 \acro{HCAL}[HCAL]{Hadron calorimeter}
@@ -55,7 +55,7 @@
 \acro{DA}[DA]{Deterministic Annealing}
 \acro{CHS}[CHS]{charged hadron subtraction}
 \acro{CSV}[CSV]{Combined Secondary Vertex}
-
+\acro{CL}[CL]{confidence level}
 \acro{IVF}[IVF]{Inclusive Vertex Finder}
 \acro{UE}[UE]{underlying event}
 \acro{MPF}[MPF]{missing transverse energy projection fraction}
