Adding some more stuff

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -16,7 +16,7 @@ responsible for limit setting for the \Htohh analysis, and performing the model 
 of the \Htohh and \AtoZh analyses, plus their combination.
 Both searches, and their interpretation, are detailed in reference \cite{CMS-HIG-14-034}.
 
-The discovery of the 125 GeV Higgs boson by the ATLAS and CMS collaborations in 2012 \cite{HDiscoveryAtlas,HDiscoveryCMS} has opened up
+The discovery of the 125 GeV Higgs boson by the ATLAS and CMS collaborations in 2012 \cite{HDiscoveryATLAS,HDiscoveryCMS} has opened up
 new possibilities for probing the Higgs sector beyond the Standard Model. As discussed in chapter \ref{chap:theory}, in some \ac{MSSM} scenarios, and some more
 generic type-II 2HDM's, a heavy neutral Higgs boson H can decay to a pair of 125 GeV Higgs bosons for low values
 of \tanb, probing a region of phase space not yet excluded by the stringent existing limits. In regions where
