--- a/backmatter.tex
+++ b/backmatter.tex
@@ -13,7 +13,13 @@
 \chapter*{List of Acronyms}
 \addcontentsline{toc}{chapter}{List of Acronyms}
 \begin{acronym}[CERN]
+\acro{EM}[EM]{electromagnetic}
+\acro{QFT}[QFT]{quantum field theory}
+\acro{QCD}[QCD]{quantom chromodynamics}
+\acro{QED}[QED]{quantum electrodynamics}
+\acro{LEP}[LEP]{Large Electron-Positron}
 \acro{MC}[MC]{Monte Carlo}
+\acro{CKM}[CKM]{Cabibbo-Kobayashi-Maskawa}
 \acro{CMS}[CMS]{Compact Muon Solenoid}
 \acro{LHC}[LHC]{Large Hadron Colider}
 \acro{CERN}[CERN]{the European Organisation for Nuclear Research }
